# Data-Formats-Reader-Writer-Test

./: .gitignore  CMakeLists.txt  ReadMe.md
CMake/: Settings.cmake
Source/: Application.cpp  CMakeLists.txt
Source/DataFormats/: CMakeLists.txt
Source/DataFormats/BMPFile/: BMPFile.cpp  BMPFile.hpp
Source/SimpleViewer/: CMakeLists.txt  Main.cpp
